# celery-docker

./: .gitignore  README.md  cookiecutter.json  docker-compose.yml  pyproject.toml
app/: tasks.py  worker.py
{{cookiecutter.project_name}}/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
