[tool.poetry]
name = "kitchen_ds_autostops"
version = "0.1.0"
description = ""
authors = ["Kirill Malev"]

[tool.poetry.dependencies]
python = "^3.6"
celery = "^5.0.4"
gevent = "^20.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
